# bitbuffer

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.tpl  flake.nix
.github/workflows/: ci.yaml
benches/: bench.rs  write.rs
bitbuffer_derive/: Cargo.toml
bitbuffer_derive/src/: discriminant.rs  lib.rs  size_hint.rs  write.rs
bitbuffer_derive/src/params/: enum.rs  field.rs  mod.rs  struct.rs  variant.rs
bitbuffer_derive/src/read/: enum.rs  field.rs  mod.rs  struct.rs
bitbuffer_derive/src/write/: enum.rs  field.rs  mod.rs  struct.rs
bitbuffer_derive/tests/: expand.rs  read.rs  read_test.rs  test.rs  write.rs  write_test.rs
bitstream_reader_derive/: Cargo.toml
bitstream_reader_derive/src/: lib.rs
bitstream_reader_derive/tests/: test.rs
src/: buffer.rs  endianness.rs  is_signed.rs  lib.rs  num_traits.rs  read.rs  readbuffer.rs  readstream.rs  stream.rs  tests.rs  unchecked_primitive.rs  write.rs  writebuffer.rs  writestream.rs
tests/: read_tests.rs  roundtrip.rs  tests.rs  write_tests.rs
