[package]
name = "bitbuffer"
version = "0.10.9"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
description = "Reading bit sequences from a byte slice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/bitbuffer"
rust-version = "1.56.0"

[dependencies]
num-traits = "0.2"
err-derive = "0.3"
bitbuffer_derive = { version = "0.10", path = "bitbuffer_derive" }
memchr = "2"
serde = { version = "1", features = ["derive"], optional = true }
schemars = { version = "0.8", optional = true }

[dev-dependencies]
maplit = "1"
iai = "0.1"
serde_json = "1"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "write"
harness = false

[workspace]
