[package]
name = "bitbuffer"
version = "0.11.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
description = "Reading bit sequences from a byte slice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/bitbuffer"
rust-version = "1.65.0"

[dependencies]
num-traits = "0.2.19"
thiserror = "1.0.61"
bitbuffer_derive = { version = "0.11.0", path = "bitbuffer_derive" }
memchr = "2.7.4"
serde = { version = "1.0.203", features = ["derive"], optional = true }
schemars = { version = "0.8.21", optional = true }

[dev-dependencies]
maplit = "1.0.2"
iai = "0.1.1"
serde_json = "1.0.117"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "write"
harness = false

[workspace]
