[package]
name = "bitbuffer_derive"
version = "0.10.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Reading bit sequences from a byte slice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/bitbuffer"

[lib]
name = "bitbuffer_derive"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
syn_util = "0.4"

[dev-dependencies]
bitbuffer = { version = "0.10", path = ".." }
