[package]
name = "bitbuffer_derive"
version = "0.11.1"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Reading bit sequences from a byte slice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/bitbuffer"

[lib]
name = "bitbuffer_derive"
proc-macro = true

[dependencies]
syn = { version = "2.0.66", features = ["extra-traits"] }
quote = "1.0.36"
proc-macro2 = "1.0.85"
structmeta = "0.3.0"
merge = "0.1.0"

[dev-dependencies]
bitbuffer = { version = "0.11", path = ".." }
