[package]
name = "bitstream_reader_derive"
version = "0.5.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Reading bit sequences from a byte slice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/bitstream_reader"

[lib]
name = "bitstream_reader_derive"
proc-macro = true

[dependencies]
syn = { version  = "0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
bitstream_reader = { version = "0.5", path = ".." }