[package]
name = "bitstream_reader_derive"
version = "0.6.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Reading bit sequences from a byte slice"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/bitstream_reader"

[lib]
name = "bitstream_reader_derive"
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
syn_util = "0.3"

[dev-dependencies]
bitstream_reader = { version = "0.6", path = ".." }
